stylesheet.css
/* ... */
#header-bottom-left { height: 27px; }

#header:after {
	content: "";
	background: #A1887F;
	padding-left: 15px;
	height: 31px;
	margin : 0;
	display: block;
	font-family: sans-serif;
	font-size: 11px;
	font-weight: bold;
	text-transform: uppercase;
	color: #CCC; }

#header-bottom-left ul.tabmenu {
	position: absolute;
	display: block;
	font-family: cantarell,Arial,sans-serif;
	font-weight: 700;
	height: 31px;
	top: 27px;
	left: 211px;
	margin: 0;
	text-align: left; }

#header-bottom-left ul.tabmenu li { margin: 0; }
#header-bottom-left ul.tabmenu li a {
	padding: 10px 15px;
	font-size: 10px;
	line-height: 31px;
	text-transform: uppercase;
	color: rgba(255,255,255,.8);
	letter-spacing: 1px;
	background-color: rgba(0,0,0,.05); }

#header-bottom-left ul.tabmenu li a:hover { background: rgba(255,255,255,.3); color: #000; }

#header-bottom-left ul.tabmenu li.selected a {
	color: #fff!important;
	text-decoration: underline;
	background-color: rgba(255,255,255,.3);
	border: 0; }

.listing-page #header-bottom-left ul.tabmenu li:nth-of-type(2):after {
	position: absolute;
	content: "!";
	width: 20px;
	text-align: center;
	line-height: 20px;
	color: #fff;
	font-size: 14px;
	height: 20px;
	background-color: #C27883;
	border-radius: 50%;
	border: 3px solid #D7CCC8;
	margin-left: -12px;
	margin-top: -13px; }

.new-page #header-bottom-left ul.tabmenu li:nth-of-type(2):after { display: none; }

#sr-header-area {
	position: absolute;
	top: 58px;
	width: 100%;
	height: 21px;
	line-height: 21px;
	background-color: #BCAAA4;
	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
	-webkit-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.2);
	-moz-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.2);
	box-shadow: 0 8px 6px -6px rgba(0,0,0,0.2); }

#sr-header-area .separator { visibility: hidden; }
.srSep { display: none; }

#sr-header-area .sr-list { margin-right: 48px; }
#sr-header-area .sr-bar a, #sr-more-link, #sr-header-area .separator, #sr-header-area .dropdown.srdrop .selected {
	background-color: transparent;
	color: rgba(255,255,255,0.6);
	transition: all 0.15s ease; }

#sr-header-area:hover a { color: #fff!important; line-height: 21px; }

#sr-header-area:hover .sr-bar a, 
#sr-header-area:hover #sr-more-link, 
#sr-header-area:hover .seperator,
#sr-header-area:hover .dropdown.srdrop .selected { color: #444; }

#sr-header-area .sr-bar a:hover, #sr-more-link:hover, #sr-header-area .dropdown.srdrop .selected:hover {
	background-color: transparent;
	border: 0px solid; color: #fff;
	transition: all 0.15s ease; }

#sr-header-area .dropdown.srdrop .selected, .res #sr-header-area #srDropdownContainer a {
	margin: 0px;
	padding: 0px;
	background-image: none;
	font-size: 0px!important; }

#sr-header-area .dropdown.srdrop .selected:after, .res #sr-header-area #srDropdownContainer a:after {
	position: relative;
	top: -1px;
	padding-right: 6px;
	content: "≡";
	font-size: 18px; }

#srDropdown, #srDropdownContainer { height: 21px; }

#sr-header-area:hover .drop-choices a { color: #000!important; }
#sr-header-area:hover .dropdown.srdrop .selected { color: #fff!important; }
#sr-header-area .drop-choices.srdrop { margin-left: 0; border-left: 0; margin-top: -7px; }

.res #srList { padding: 3px; top: 80px; left: 0; border: none; background-color: #FFF; }
.res #srList tr { border-bottom:none; }
.res #srList tr:hover{ background-color:#eee; }
.res #srList td a { width: 100%; display: block; color: #808080!important; text-transform: uppercase; }
.res #srList td a:hover { color: #333!important; }

.res #RESShortcutsEditContainer { display: none; }

.res #srLeftContainer, .res #RESShortcutsViewport, .res #RESShortcutsEditContainer  { max-height: 21px!important; line-height: 21px!important; }

/* Userbar */

#header-bottom-right,
.res #header-bottom-right {
position: absolute;
top: 27px;
background-color: #A1887F;
padding: 0 0 0 10px;
height: 31px;
line-height: 31px;
border-radius: 0; }

#header-bottom-right a,
#header-bottom-right .user,
#header-bottom-right .separator { color: #6e5850; }

.res #userbarToggle {
min-height: 31px;
padding: 0;
color: #E8E3E1;
border-radius: 0;
background-color: #a9938a;
border: 0;
text-align: center;
line-height: 31px; }

#header-bottom-right .separator,
.res #header-bottom-right .separator { display: none!important; }

#header-bottom-right #userbarToggle + * { margin-left: 0!important; }

#header-bottom-right .user {
position: absolute;
top: -27px;
right: 0;
text-align: right;
min-width: 200px;
padding-right: 10px;
line-height: 27px; }

#header-bottom-right #mail,
.res #header-bottom-right #mail {
top: 0!important;
height: 31px;
width: 35px!important; }

#header-bottom-right #mail.nohavemail,
#header-bottom-right #mail.havemail { background: url(%%userbar-books%%) 0 -31px no-repeat; }

#header-bottom-right #mail.havemail { background-color: #FF7500; }

#header-bottom-right #modmail {
margin: 0;
top: 0;
width: 35px;
height: 31px;
border-left: 1px solid #D7CCC8;
border-right: 1px solid #D7CCC8; }

#header-bottom-right #modmail.havemail { background: url(%%userbar-books%%) -35px 0 no-repeat #ff4500; }

#header-bottom-right #modmail.nohavemail { background: url(%%userbar-books%%) -35px -31px no-repeat; }

#header-bottom-right .flat-list,
.loggedin .logout {
    display: inline-block;
    vertical-align: top;
}

#header-bottom-right a.pref-lang, .loggedin .logout a {
background: url(%%userbar-books%%) -70px 0 no-repeat;
width: 35px;
height: 31px;
display: inline-block;
text-indent: -9999px;
margin: 0px; }

.loggedin .logout a {
background: url(%%userbar-books%%) 0 0 no-repeat;
border-left: 1px solid #D7CCC8; }

#header-bottom-right #mail:hover,
#header-bottom-right #modmail:hover,
#header-bottom-right a.pref-lang:hover, .loggedin .logout a:hover,
.gearIcon:hover { background-color: #997d74!important; }

#header-bottom-right #mail.havemail:hover { background-color: #eb6c00!important; }
#header-bottom-right #modmail.havemail:hover { background-color: #eb4000!important; }
/* ... */

